--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
 		"next": "15.4.6",
 		"react": "19.1.0",
 		"react-dom": "19.1.0",
-		"react-intersection-observer": "^9.16.0"
+		"react-intersection-observer": "^9.16.0",
+		"sharp": "^0.34.4"
 	},
 	"devDependencies": {
 		"@eslint/eslintrc": "^3",
