--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
 		"next": "15.5.3",
 		"react": "19.1.1",
 		"react-dom": "19.1.1",
-		"react-intersection-observer": "^9.16.0",
-		"sharp": "^0.34.4"
+		"react-intersection-observer": "^9.16.0"
 	},
 	"devDependencies": {
 		"@eslint/eslintrc": "^3.3.1",
